# I18nForge

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  README_en.md  README_en_sample.md  README_es.md  README_ja.md  README_ko.md  README_zh-TW.md  main.py  pyproject.toml  requirements.txt
i18nforge/: __init__.py  cli.py  config.py  generator.py  parser.py  translator.py
tests/: test_i18nforge.py
